Bug 510484 - Kmymoney installed from Flathub crashes when New Transaction button is clicked
Summary: Kmymoney installed from Flathub crashes when New Transaction button is clicked
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.1
Platform: Flatpak Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 510486 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-10-11 09:12 UTC by KDamian
Modified: 2025-10-17 09:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments
gdb bt full of the crash (38.61 KB, text/x-log)
2025-10-11 09:12 UTC, KDamian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description KDamian 2025-10-11 09:12:05 UTC
Created attachment 185686 [details]
gdb bt full of the crash

SUMMARY

Kmymoney installed from Flathub crashes when New Transaction button is clicked, details below.


STEPS TO REPRODUCE

1. Install Kmymoney (information about the version below) from Flathub.
2. Open Kmymoney by clicking on the icon or running flatpak run org.kde.kmymoney in the terminal (same results).
3. Open an existing database (if not opened automatically); database was created in the 5.1.3 version.
4. Click on the Ledger button in the sidebar.
5. Click on the New transaction button in the toolbar above the lodger.

OBSERVED RESULT

Kmymoney crashes.

EXPECTED RESULT

New Transaction should be added.

SOFTWARE/OS VERSIONS

Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.5
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.2
Kernel Version: 6.16.10-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-2520M CPU @ 2.50GHz
Memory: 8 GiB of RAM (7.7 GiB usable)
Graphics Processor: llvmpipe

Kmymoney information:

       Azonosító: org.kde.kmymoney
      Hivatkozás: app/org.kde.kmymoney/x86_64/stable
    Architektúra: x86_64
              Branch: stable
         Version: 5.2.1
         License: GPL-2.0+
          Eredet: flathub
      Collection: org.flathub.Stable
    Installation: system
       Installed: 52,4 MB
Runtime: org.kde.Platform/x86_64/6.9
             Sdk: org.kde.Sdk/x86_64/6.9

          Commit: 7996dc02d9ede7fea9127030d0988048c15dc0f467a308e861acb29cf1b379d5
           Parent: d3629ddab4e9af899f2735fc9fb5e2e65ec193778bf5484e34c5c940918fecb6
           Subject: Merge pull request #58 from flathub/filesystem (3441b729ee25)
           Dátum: 2025-10-09 15:52:12 +0000

Flatpak version: 1.16.1

Problem did not happen with 5.1.3 from the same source.

ADDITIONAL INFORMATION

Attached the gdb bt full log, please let me know if further debugging is needed.
Comment 1 Mark Penner 2025-10-16 02:50:06 UTC
This seems to have the same cause as https://bugs.kde.org/show_bug.cgi?id=510486 It seems to be related to the Hungarian date format. Flatpak doesn't make a difference. I built KMyMoney from git master and ran it with `LANG=hu kmymoney` and it seg-faulted before the window even appeared. The seg-fault happens in KMyMoneyDateEditPrivate::editParts where text is set to u"2025. 10. 15." .
Comment 2 KDamian 2025-10-16 05:18:33 UTC
(In reply to Mark Penner from comment #1)
> This seems to have the same cause as
> https://bugs.kde.org/show_bug.cgi?id=510486 It seems to be related to the
> Hungarian date format. Flatpak doesn't make a difference. I built KMyMoney
> from git master and ran it with `LANG=hu kmymoney` and it seg-faulted before
> the window even appeared. The seg-fault happens in
> KMyMoneyDateEditPrivate::editParts where text is set to u"2025. 10. 15." .

Yes, after setting the LC_ALL to en_EN it works fine, so you are most probaby correct.

I will close the 510486 as duplicate and leave this one open.
Comment 3 KDamian 2025-10-16 05:22:22 UTC
*** Bug 510486 has been marked as a duplicate of this bug. ***
Comment 4 Thomas Baumgart 2025-10-17 08:25:04 UTC
Git commit 79e16753263bfbc465bced008bb9927f88fd1f84 by Thomas Baumgart.
Committed on 17/10/2025 at 08:22.
Pushed by tbaumgart into branch 'master'.

Support date formats using multiple delimiter characters
FIXED-IN: 5.2.2

M  +34   -14   kmymoney/widgets/kmymoneydateedit.cpp

https://invent.kde.org/office/kmymoney/-/commit/79e16753263bfbc465bced008bb9927f88fd1f84
Comment 5 Thomas Baumgart 2025-10-17 09:18:14 UTC
Git commit 02d73bca36588f332ca78dbd967521dfc3cf61f3 by Thomas Baumgart.
Committed on 17/10/2025 at 09:18.
Pushed by tbaumgart into branch '5.2'.

Support date formats using multiple delimiter characters
FIXED-IN: 5.2.2
(cherry picked from commit 79e16753263bfbc465bced008bb9927f88fd1f84)

M  +34   -14   kmymoney/widgets/kmymoneydateedit.cpp

https://invent.kde.org/office/kmymoney/-/commit/02d73bca36588f332ca78dbd967521dfc3cf61f3