Support date formats using multiple delimiter characters

BUG: 510484
FIXED-IN: 5.2.2
(cherry picked from commit 79e16753263bfbc465bced008bb9927f88fd1f84)